feat: Add contrib modules (no config yet)

--- a/assets/scaffold/recipes/sous_layout_builder/recipe.yml
+++ b/assets/scaffold/recipes/sous_layout_builder/recipe.yml
@@ -3,7 +3,9 @@ description: 'A recipe that contains default configuration for Sous layout build
 type: 'Sous'
 install:
   # Install core dependencies.
+  - gin_lb
   - layout_builder
+  - layout_builder_browser
   - layout_discovery
 config:
   actions:
