feat: Add sous_layout_builder recipe to composer.json and depedency on sous_content_types

--- a/assets/scaffold/recipes/sous_layout_builder/recipe.yml
+++ b/assets/scaffold/recipes/sous_layout_builder/recipe.yml
@@ -1,6 +1,8 @@
 name: 'Sous Layout Builder'
 description: 'A recipe that contains default configuration for Sous layout builder.'
 type: 'Sous'
+recipes:
+  - sous_content_types
 install:
   # Install core dependencies.
   - gin_lb
