--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "fourkitchens/sous_admin": "*",
         "fourkitchens/sous_media": "*",
         "fourkitchens/sous_paragraphs": "*",
+        "fourkitchens/sous_layout_builder": "*",
         "oomphinc/composer-installers-extender": "^2.0",
         "webflo/drupal-finder": "^1.2",
         "zaporylie/composer-drupal-optimizations": "^1.0"
