--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,10 @@
         {
             "type": "path",
             "url": "assets/scaffold/recipes/sous_paragraphs"
+        },
+        {
+            "type": "path",
+            "url": "assets/scaffold/recipes/sous_formats"
         }
     ],
     "require": {
@@ -42,6 +46,7 @@
         "fourkitchens/sous_admin": "*",
         "fourkitchens/sous_media": "*",
         "fourkitchens/sous_paragraphs": "*",
+        "fourkitchens/sous_formats": "*",
         "oomphinc/composer-installers-extender": "^2.0",
         "webflo/drupal-finder": "^1.2",
         "zaporylie/composer-drupal-optimizations": "^1.0"
